# currency_conventor

./: API.py  EUR.py  GUI.py  ILS.py  USD.py  alldata.txt  functions.py  main.py  pyproject.toml
tests/: my_test.py
