[tool.poetry]
name = "only-course2"
version = "0.1.0"
description = ""
authors = ["Ofir <ofirfirst@gmail.com>"]
readme = "README.md"
packages = [{include = "only_course2"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
